[gd_scene load_steps=3 format=3 uid="uid://dcotceimyr15f"]

[ext_resource type="Theme" uid="uid://bhx63o0ahxgyw" path="res://resources/theme.tres" id="1_ldy1f"]
[ext_resource type="Script" uid="uid://ci1a38xu2u5ot" path="res://src/MainGame/GUI/game_menu.gd" id="2_iorjj"]

[node name="GameMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ldy1f")
script = ExtResource("2_iorjj")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Menu"
horizontal_alignment = 1

[node name="ActionPromptLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="ButtonList" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
